--- a/rootfs/traefik/etc/traefik.yaml
+++ b/rootfs/traefik/etc/traefik.yaml
@@ -17,6 +17,12 @@ providers:
 entryPoints:
   http:
     address: ":80"
+    http:
+      redirections:
+        entrypoint:
+          to: https
+          scheme: https
+          
   https:
     address: ":443"
 
