--- a/compose.yaml
+++ b/compose.yaml
@@ -92,12 +92,17 @@ services:
       - "--entrypoints.https.address=:443"
       - "--entrypoints.https.http.middlewares=default-errors,default-ratelimit,default-ipallowlist-RFC1918"
       - "--serversTransport.insecureSkipVerify=true" # disable upstream HTTPS certificate checks (https > https)
+      - "--experimental.plugins.rewriteResponseHeaders.moduleName=github.com/jamesmcroft/traefik-plugin-rewrite-response-headers"
+      - "--experimental.plugins.rewriteResponseHeaders.version=v1.1.2"
+      - "--experimental.plugins.geoblock.moduleName=github.com/PascalMinder/geoblock"
+      - "--experimental.plugins.geoblock.version=v0.3.2"
     ports:
       - "80:80/tcp"
       - "443:443/tcp"
     volumes:
       - "var:/traefik/var"
-      - "socket-proxy.run:/var/run" # access docket socket via proxy read-only
+      - "socket-proxy.run:/var/run" # access docker socket via proxy read-only
+      - "plugins:/plugins-storage" # plugins stored as volume because of read-only
     networks:
       backend:
       frontend:
@@ -120,6 +125,7 @@ services:
 
 volumes:
   var:
+  plugins:
   socket-proxy.run:
 
 networks:
