[fix] remove all images even if running

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -348,7 +348,10 @@ jobs:
         if: env.WORKFLOW_CREATE_COMPARISON == 'true'
         continue-on-error: true
         run: |    
+          docker rm -f $(docker ps -a -q)
           docker image prune -af
+          docker image rm -f registry
+          docker image rm -f moby/buildkit
           docker image pull ${{ env.WORKFLOW_CREATE_COMPARISON_IMAGE }}
           docker image pull ${{ env.WORKFLOW_CREATE_COMPARISON_FOREIGN_IMAGE }}
           docker image ls &> ./docker.image.ls
