[fix] git push on README change

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -409,7 +409,7 @@ jobs:
             git add LICENSE
           fi
           git commit -m "auto update README.md"
-          git push
+          git push origin HEAD:master
 
 
 
