[feature] new comparison files

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -347,13 +347,11 @@ jobs:
         if: env.WORKFLOW_CREATE_COMPARISON == 'true'
         continue-on-error: true
         run: |    
-          docker rm -f $(docker ps -a -q)
-          docker image prune -af
-          docker image rm -f registry
-          docker image rm -f moby/buildkit
           docker image pull ${{ env.WORKFLOW_CREATE_COMPARISON_IMAGE }}
           docker image pull ${{ env.WORKFLOW_CREATE_COMPARISON_FOREIGN_IMAGE }}
-          docker image ls &> ./comparison.size.log
+          docker image ls -a --filter "reference=${{ env.WORKFLOW_CREATE_COMPARISON_IMAGE }}" --format json | jq --raw-output '.Size' &> ./comparison.size0.log
+          docker image ls -a --filter "reference=${{ env.WORKFLOW_CREATE_COMPARISON_FOREIGN_IMAGE }}" --format json | jq --raw-output '.Size' &> ./comparison.size1.log
+          docker run --entrypoint "" --rm -ti ${{ env.WORKFLOW_CREATE_COMPARISON_FOREIGN_IMAGE }} id &> ./comparison.id.log
 
       - name: github / create README.md
         id: github-readme
