--- a/.github/workflows/cron.update.yml
+++ b/.github/workflows/cron.update.yml
@@ -25,6 +25,12 @@ jobs:
           echo "LATEST_VERSION=$(curl -s https://api.github.com/repos/traefik/traefik/releases/latest | jq -r '.tag_name' | sed 's/v//')" >> "${GITHUB_ENV}"
           echo "LATEST_TAG=$(git describe --abbrev=0 --tags `git rev-list --tags --max-count=1` | sed 's/v//')" >> "${GITHUB_ENV}"
 
+      - name: cron-update / setup node
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
+        with:
+          node-version: '20'
+      - run: npm i semver
+
       - name: cron-update / compare latest with current version
         uses: actions/github-script@62c3794a3eb6788d9a2a72b219504732c0c9a298
         with:
@@ -32,7 +38,7 @@ jobs:
             const { existsSync, readFileSync, writeFileSync } = require('node:fs');
             const { resolve } = require('node:path');
             const { inspect } = require('node:util');
-            const latest = "${{ env.LATEST_VERSION }}";
+            const semver = require('semver')
             const repository = {dot:{}};
 
             try{
@@ -50,17 +56,25 @@ jobs:
               core.setFailed(e);
             }
 
-            const current = repository.dot.semver.version;
+            const latest = semver.valid(semver.coerce('${{ env.LATEST_VERSION }}'));
+            const current = semver.valid(semver.coerce(repository.dot.semver.version));
+            const tag = semver.valid(semver.coerce('${{ env.LATEST_TAG }}'));
 
-            if(latest.match(/\d+\.\d+\.\d+/i) && latest !== `${repository.dot.semver.version}`){
-              core.info(`found newer version ${latest}`);
-              repository.dot.semver.version = latest.split('.').slice(0,3).join('.');
+            if(latest && latest !== current){
+              core.info(`new ${semver.diff(current, latest)} release found (${latest})!`)
+              repository.dot.semver.version = latest;
+              if(tag){
+                core.exportVariable('WORKFLOW_NEW_TAG', semver.inc(tag, semver.diff(current, latest)));
+              }
+
               if(repository.dot.semver?.latest){
                 repository.dot.semver.latest = repository.dot.semver.version;
               }
+
               if(repository.dot?.readme?.comparison?.image){
-                repository.dot.readme.comparison.image = repository.dot.readme.comparison.image.replace(current , repository.dot.semver.version);
+                repository.dot.readme.comparison.image = repository.dot.readme.comparison.image.replace(current, repository.dot.semver.version);
               }
+
               try{
                 writeFileSync(resolve('.json'), JSON.stringify(repository.dot, null, 2));
                 core.exportVariable('WORKFLOW_AUTO_UPDATE', true);
@@ -68,7 +82,7 @@ jobs:
                 core.setFailed(e);
               }
             }else{
-              core.info(`latest version ${latest} is equal to current version ${repository.dot.semver.version}, no update needed!`);
+              core.info('no new release found');
             }
 
             core.info(inspect(repository.dot, {showHidden:false, depth:null, colors:true}));
@@ -84,5 +98,7 @@ jobs:
           git push origin HEAD:master
 
       - name: cron-update / create new tag with new release
+        if: env.WORKFLOW_AUTO_UPDATE == 'true' && env.WORKFLOW_NEW_TAG != ''
         run: |
-          git rev-list --tags --max-count=1
+          git tag -a v${{ env.WORKFLOW_NEW_TAG }} -m "v${{ env.WORKFLOW_NEW_TAG }}" $(git rev-list --branches --max-count=1)
+          git push --tags
