--- a/.github/workflows/cron.update.yml
+++ b/.github/workflows/cron.update.yml
@@ -93,14 +93,7 @@ jobs:
         run: |         
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git tag -a v${{ env.WORKFLOW_NEW_TAG }} -m "v${{ env.WORKFLOW_NEW_TAG }}" ${SHA256}
           git add .json
           git commit -m "[upgrade] ${{ env.LATEST_VERSION }}"
-          git push origin HEAD:master
-
-      - name: cron-update / create new tag with new release
-        if: env.WORKFLOW_AUTO_UPDATE == 'true' && env.WORKFLOW_NEW_TAG != ''
-        run: |
-          SHA256=$(git rev-list --branches --max-count=1)
-          git tag -a v${{ env.WORKFLOW_NEW_TAG }} -m "v${{ env.WORKFLOW_NEW_TAG }}" ${SHA256}
-          git push --tags
-          git push
+          git push origin v${{ env.WORKFLOW_NEW_TAG }}
