--- a/.github/workflows/cron.update.yml
+++ b/.github/workflows/cron.update.yml
@@ -108,7 +108,7 @@ jobs:
         if: env.WORKFLOW_AUTO_UPDATE == 'true' && steps.checkout.outcome == 'success'
         uses: the-actions-org/workflow-dispatch@3133c5d135c7dbe4be4f9793872b6ef331b53bc7
         with:
-          workflow: tags.yml
+          workflow: docker.yml
           wait-for-completion: false
           token: "${{ secrets.REPOSITORY_TOKEN }}"
           inputs: '{ "release":"true", "readme":"true" }'
