style: better comments

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
     # you can check https://github.com/11notes/docker-socket-proxy for all details
     image: "11notes/socket-proxy:2.1.2"
     read_only: true
-    user: "0:0" 
+    user: "0:108" 
     environment:
       TZ: "Europe/Zurich"
     volumes:
@@ -13,20 +13,11 @@ services:
       - "socket-proxy.run:/run/proxy"
     restart: "always"
 
-  errors:
-    # this image can be used to display a simple error message since Traefik can’t serve content
-    image: "11notes/traefik:3.4.4"
-    read_only: true
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.services.default-errors.loadbalancer.server.port=8080"
-    environment:
-      TZ: "Europe/Zurich"
-    networks:
-      backend:
-    restart: "always"
-
   traefik:
+    depends_on:
+      socket-proxy:
+        condition: "service_healthy"
+        restart: true
     image: "11notes/traefik:3.4.4"
     read_only: true
     labels:
@@ -37,8 +28,8 @@ services:
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.middlewares=dashboard-auth"
       - "traefik.http.routers.dashboard.entrypoints=https"
-      - "traefik.http.routers.dashboard.tls=true"
-      - "traefik.http.middlewares.dashboard-auth.basicauth.users=admin:$$2a$$12$$ktgZsFQZ0S1FeQbI1JjS9u36fAJMHDQaY6LNi9EkEp8sKtP5BK43C" # admin / traefik, please change!
+      # admin / traefik, please change!
+      - "traefik.http.middlewares.dashboard-auth.basicauth.users=admin:$$2a$$12$$ktgZsFQZ0S1FeQbI1JjS9u36fAJMHDQaY6LNi9EkEp8sKtP5BK43C"
 
       # default ratelimit
       - "traefik.http.middlewares.default-ratelimit.ratelimit.average=100"
@@ -52,11 +43,9 @@ services:
       - "traefik.http.routers.default.rule=HostRegexp(`.+`)"
       - "traefik.http.routers.default.priority=1"
       - "traefik.http.routers.default.entrypoints=https"
-      - "traefik.http.routers.default.tls=true"
       - "traefik.http.routers.default.service=default-errors"
 
-      # default http to https
-      # if you need a http website, don't worry, this router has priority 1
+      # default http to https redirection
       - "traefik.http.middlewares.default-http.redirectscheme.permanent=true"
       - "traefik.http.middlewares.default-http.redirectscheme.scheme=https"
       - "traefik.http.routers.default-http.priority=1"
@@ -66,23 +55,22 @@ services:
       - "traefik.http.routers.default-http.service=default-http"
       - "traefik.http.services.default-http.loadbalancer.passhostheader=true"
 
-      # default errors
+      # default errors middleware
+      # you need to define a service that responds to /{status}
       - "traefik.http.middlewares.default-errors.errors.status=402-599"
       - "traefik.http.middlewares.default-errors.errors.query=/{status}"
       - "traefik.http.middlewares.default-errors.errors.service=default-errors"
-    depends_on:
-      socket-proxy:
-        condition: "service_healthy"
-        restart: true
     environment:
       TZ: "Europe/Zurich"
     command:
-      - "--ping.terminatingStatusCode=204" # ping is needed for the health check to work!
+      # ping is needed for the health check to work!
+      - "--ping.terminatingStatusCode=204"
       - "--global.checkNewVersion=false"
       - "--global.sendAnonymousUsage=false"
       - "--accesslog=true"
       - "--api.dashboard=true"
-      - "--api.insecure=false" # disable insecure api and dashboard access
+      # disable insecure api and dashboard access
+      - "--api.insecure=false"
       - "--log.level=INFO"
       - "--log.format=json"
       - "--providers.docker.exposedByDefault=false"
@@ -90,8 +78,11 @@ services:
       - "--entrypoints.http.address=:80"
       - "--entrypoints.http.http.middlewares=default-errors,default-ratelimit,default-ipallowlist-RFC1918"
       - "--entrypoints.https.address=:443"
+      - "--entrypoints.https.http.tls=true"
+      - "--entrypoints.https.http.tls.options=default"
       - "--entrypoints.https.http.middlewares=default-errors,default-ratelimit,default-ipallowlist-RFC1918"
-      - "--serversTransport.insecureSkipVerify=true" # disable upstream HTTPS certificate checks (https > https)
+      # disable upstream HTTPS certificate checks (https > https)
+      - "--serversTransport.insecureSkipVerify=true"
       - "--experimental.plugins.rewriteResponseHeaders.moduleName=github.com/jamesmcroft/traefik-plugin-rewrite-response-headers"
       - "--experimental.plugins.rewriteResponseHeaders.version=v1.1.2"
       - "--experimental.plugins.geoblock.moduleName=github.com/PascalMinder/geoblock"
@@ -101,24 +92,49 @@ services:
       - "443:443/tcp"
     volumes:
       - "var:/traefik/var"
-      - "socket-proxy.run:/var/run" # access docker socket via proxy read-only
-      - "plugins:/plugins-storage" # plugins stored as volume because of read-only
+      # access docker socket via proxy read-only
+      - "socket-proxy.run:/var/run"
+      # plugins stored as volume because of read-only
+      - "plugins:/plugins-storage"
     networks:
       backend:
       frontend:
     sysctls:
-      net.ipv4.ip_unprivileged_port_start: 80 # allow rootless container to access port 80 and higher
+      # allow rootless container to access ports < 1024
+      net.ipv4.ip_unprivileged_port_start: 80
     restart: "always"
 
-  nginx: # example container
+  errors:
+    # this image can be used to display a simple error message since Traefik can’t serve content
+    image: "11notes/traefik:errors"
+    read_only: true
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.default-errors.loadbalancer.server.port=8080"
+    environment:
+      TZ: "Europe/Zurich"
+    tmpfs:
+      # needed for read_only: true
+      - "/nginx/cache:uid=1000,gid=1000"
+      - "/nginx/run:uid=1000,gid=1000"
+    networks:
+      backend:
+    restart: "always"
+
+  # example container
+  nginx:
     image: "11notes/nginx:stable"
+    read_only: true
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nginx-example.rule=Host(`${NGINX_FQDN}`)"
       - "traefik.http.routers.nginx-example.entrypoints=https"
-      - "traefik.http.routers.nginx-example.tls=true"
       - "traefik.http.routers.nginx-example.service=nginx-example"
       - "traefik.http.services.nginx-example.loadbalancer.server.port=3000"
+    tmpfs:
+      # needed for read_only: true
+      - "/nginx/cache:uid=1000,gid=1000"
+      - "/nginx/run:uid=1000,gid=1000"
     networks:
       backend:
     restart: "always"
