feat: added lets encrypt example

--- a/compose.yaml
+++ b/compose.yaml
@@ -64,6 +64,8 @@ services:
       - "traefik.http.services.default-http.loadbalancer.passhostheader=true"
     environment:
       TZ: "Europe/Zurich"
+      PORKBUN_API_KEY: "${PORKBUN_API_KEY}"
+      PORKBUN_SECRET_API_KEY: "${PORKBUN_SECRET_API_KEY}"
     command:
       # ping is needed for the health check to work!
       - "--ping=true"
@@ -89,6 +91,13 @@ services:
       - "--experimental.plugins.rewriteResponseHeaders.version=v1.1.2"
       - "--experimental.plugins.geoblock.moduleName=github.com/PascalMinder/geoblock"
       - "--experimental.plugins.geoblock.version=v0.3.3"
+      # let's encrypt example for porkbun DNS challenge
+      - "--certificatesResolvers.porkbun.acme.storage=/traefik/var/porkbun.json"
+      - "--certificatesResolvers.porkbun.acme.dnsChallenge.provider=porkbun"
+      - "--certificatesResolvers.porkbun.acme.dnsChallenge.delayBeforeCheck=30"
+      - "--entrypoints.https.http.tls.certresolver=porkbun"
+      - "--entrypoints.https.http.tls.domains[0].main=${DOMAIN0}"
+      - "--entrypoints.https.http.tls.domains[0].sans=*.${DOMAIN0}"
     ports:
       - "80:80/tcp"
       - "443:443/tcp"
@@ -127,8 +136,7 @@ services:
       - "traefik.http.routers.nginx-example.rule=Host(`${NGINX_FQDN}`)"
       - "traefik.http.routers.nginx-example.entrypoints=https"
       - "traefik.http.routers.nginx-example.service=nginx-example"
-    ports:
-      - "3000:3000/tcp"
+      - "traefik.http.services.nginx-example.loadbalancer.server.port=3000"
     tmpfs:
       # needed for read_only: true
       - "/nginx/cache:uid=1000,gid=1000"
