--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,16 @@
 name: "reverse-proxy"
+x-lockdown: &lockdown
+  # prevents write access to the image itself
+  read_only: true
+  # prevents any process within the container to gain more privileges
+  security_opt:
+    - "no-new-privileges=true"
 services:
   socket-proxy:
     # this image is used to expose the docker socket as read-only to traefik
     # you can check https://github.com/11notes/docker-socket-proxy for all details
     image: "11notes/socket-proxy:2.1.3"
-    read_only: true
+    <<: *lockdown
     user: "0:108" 
     environment:
       TZ: "Europe/Zurich"
@@ -19,7 +25,7 @@ services:
         condition: "service_healthy"
         restart: true
     image: "11notes/traefik:3.5.0"
-    read_only: true
+    <<: *lockdown
     labels:
       - "traefik.enable=true"
 
@@ -117,7 +123,7 @@ services:
   errors:
     # this image can be used to display a simple error message since Traefik can’t serve content
     image: "11notes/traefik:errors"
-    read_only: true
+    <<: *lockdown
     labels:
       - "traefik.enable=true"
       - "traefik.http.services.default-errors.loadbalancer.server.port=8080"
@@ -130,7 +136,7 @@ services:
   # example container
   nginx:
     image: "11notes/nginx:stable"
-    read_only: true
+    <<: *lockdown
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nginx-example.rule=Host(`${NGINX_FQDN}`)"
